Fixed gap between sections problem.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,11 @@
 body {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box !important;
 }
 
 header {
-	min-height: 100vh;
+	min-height: 100vh
 }
 
 #video-background {
@@ -29,7 +30,19 @@ header {
 	border: 5px white solid;
 }
 
-#proficiencies {
+.section-header {
+	padding-top: 70px;
+}
+
+#proficiencies,
+#ui-ux {
 	min-height: 100vh;
+}
+
+#proficiencies {
 	background-color: #555;
+}
+
+#ui-ux {
+	background-color: #fff;
 }
